<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/UserIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        app:cardCornerRadius="75dp"
        android:background="#00000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_settings_avatar" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/user_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/h1_text_color"
        android:textStyle="bold"
        android:textSize="22dp"
        android:layout_marginTop="15dp"
        android:text="@string/user_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserIcon" />

    <TextView
        android:id="@+id/user_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_status"
        android:textSize="18dp"
        android:textColor="@color/h2_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        app:cardCornerRadius="20dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/background_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_status">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout style="@style/block_settings">

                <ImageView
                    android:id="@+id/img_theme"
                    style="@style/img_settings"
                    android:src="@drawable/ic_settings_theme" />

                <TextView
                    android:id="@+id/text_theme"
                    style="@style/text_settings"
                    android:text="@string/text_setting_theme"
                    app:layout_constraintEnd_toStartOf="@+id/spinner_theme"
                    app:layout_constraintStart_toEndOf="@+id/img_theme" />

                <Spinner
                    android:id="@+id/spinner_theme"
                    style="@style/spriner_settings"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout style="@style/block_settings">

                <ImageView

                    android:id="@+id/img_reader"
                    style="@style/img_settings"
                    android:src="@drawable/ic_settings_reader" />

                <TextView
                    android:id="@+id/text_reader"
                    style="@style/text_settings"
                    android:text="@string/text_setting_reader"
                    app:layout_constraintEnd_toStartOf="@+id/spinner_reader"
                    app:layout_constraintStart_toEndOf="@+id/img_reader"/>

                <Spinner
                    android:id="@+id/spinner_reader"
                    style="@style/spriner_settings"
                    android:prompt="@string/text_setting_theme"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout style="@style/block_settings" >

                <ImageView
                    android:id="@+id/img_target_language"
                    style="@style/img_settings"
                    android:src="@drawable/ic_settings_language"/>

                <TextView
                    android:id="@+id/text_target_language"
                    style="@style/text_settings"
                    android:text="@string/text_setting_language"
                    app:layout_constraintEnd_toStartOf="@+id/spinner_target_language"
                    app:layout_constraintStart_toEndOf="@+id/img_target_language" />

                <Spinner
                    android:id="@+id/spinner_target_language"
                    style="@style/spriner_settings" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout style="@style/block_settings">

                <ImageView
                    android:id="@+id/img_style_text"
                    style="@style/img_settings"
                    android:src="@drawable/ic_settings_style_text"/>

                <TextView
                    android:id="@+id/text_style_text"
                    style="@style/text_settings"
                    android:text="@string/text_setting_style_text"
                    app:layout_constraintEnd_toStartOf="@+id/spinner_style_text"
                    app:layout_constraintStart_toEndOf="@+id/img_style_text"/>
                <Spinner
                    android:id="@+id/spinner_style_text"
                    style="@style/spriner_settings"/>
            </androidx.constraintlayout.widget.ConstraintLayout>




        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <include layout="@layout/down_navbar" />

</androidx.constraintlayout.widget.ConstraintLayout>