<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/down_menu"
    android:layout_width="match_parent"
    android:background="@color/background_nav_bar"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:paddingBottom="10dp"
    android:paddingTop="5dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.55"
    app:layout_constraintStart_toStartOf="parent">

    <LinearLayout
        android:id="@+id/menu_home"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:clickable="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_menu_home" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:fontFamily="@font/inter"
            android:textColor="@color/down_nav_item_color"
            android:textStyle="bold"
            android:text="@string/down_menu_home" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_quran"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:clickable="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_menu_quran" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:textStyle="bold"
            android:textColor="@color/down_nav_item_color"
            android:text="@string/down_menu_quran"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_play_list"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:clickable="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_menu_play_list" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:textStyle="bold"
            android:textColor="@color/down_nav_item_color"
            android:text="@string/down_menu_play_list"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_settings"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:clickable="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_menu_settings" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:textStyle="bold"
            android:textColor="@color/down_nav_item_color"
            android:text="@string/down_menu_settings"
            android:textAlignment="center" />
    </LinearLayout>
</LinearLayout>